# cmake-project-template

./: .gitignore  CMakeLists.txt  Findproject_name_here.cmake  README.md  README_template.md  set_project.sh
doc/: doxygen.conf  doxygen_project_name.conf  main.dox
include/project_name_here/: project_name_here.h
src/: CMakeLists.txt  project_name_here.cpp
src/examples/: CMakeLists.txt  project_name_here_example.cpp
test/: CMakeLists.txt  project_name_here_test.cpp
