IF(BUILD_TESTING)
  message("BUILD_TESTING enabled...")
  FIND_PACKAGE(GTest)
  IF(${GTEST_FOUND})
    MESSAGE("GTest found")
    INCLUDE_DIRECTORIES(../include ${GTEST_INCLUDE_DIRS})
    FILE(GLOB TEST_FILES "*_test.cpp")
    FOREACH(TEST_FILE ${TEST_FILES})
      STRING(REGEX REPLACE "(^.*/|\\.[^.]*$)" "" TEST_WO_EXT ${TEST_FILE})
      MESSAGE("Test ${TEST_WO_EXT} found")
      ADD_EXECUTABLE(${TEST_WO_EXT} ${TEST_FILE})
      TARGET_LINK_LIBRARIES(${TEST_WO_EXT} ${GTEST_BOTH_LIBRARIES} project_name_here pthread)
      ADD_TEST(NAME ${TEST_FILE} COMMAND $<TARGET_FILE:${TEST_WO_EXT}>)
    ENDFOREACH()
  ELSE()
    MESSAGE("GTest not found, skipping tests...")
  ENDIF()
ELSE()
  MESSAGE("BUILD_TESTING disabled, skipping tests...")
ENDIF()

